RESOLVED FIXED279733
REGRESSION(283670@main): [Win] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) under SWServer::addRegistrationFromStore
https://bugs.webkit.org/show_bug.cgi?id=279733
Summary REGRESSION(283670@main): [Win] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyT...
Fujii Hironori
Reported 2024-09-15 05:36:18 PDT
The our internal Windows Debug tester buildbot is observing an assertion failures after 283670@main. 283670@main bad 283669@main good Regressions: Unexpected crashes (50) http/tests/inspector/dom/cross-domain-inspected-node-access.html [ Crash ] http/tests/inspector/dom/disconnect-dom-tree-after-main-frame-navigation.html [ Crash ] http/tests/inspector/network/beacon-type.html [ Crash ] http/tests/inspector/network/copy-as-curl.html [ Crash ] http/tests/inspector/network/copy-as-fetch.html [ Crash ] http/tests/inspector/network/eventsource-type.html [ Crash ] http/tests/inspector/network/fetch-network-data.html [ Crash ] http/tests/inspector/network/fetch-response-body-304.html [ Crash ] http/tests/inspector/network/fetch-response-body.html [ Crash ] http/tests/inspector/network/getSerializedCertificate.html [ Crash ] http/tests/inspector/network/har/har-basic.html [ Crash ] http/tests/inspector/network/har/har-import.html [ Crash ] http/tests/inspector/network/har/har-page-aggressive-gc.html [ Crash ] http/tests/inspector/network/har/har-page.html [ Crash ] http/tests/inspector/network/intercept-request-fragment.html [ Crash ] http/tests/inspector/network/intercept-request-main-resource-with-response.html [ Crash ] http/tests/inspector/network/intercept-request-properties.html [ Crash ] http/tests/inspector/network/intercept-request-subresource-with-response-error-status-code.html [ Crash ] http/tests/inspector/network/intercept-request-subresource-with-response.html [ Crash ] http/tests/inspector/network/intercept-request-subresource.html [ Crash ] http/tests/inspector/network/intercept-request-with-error.html [ Crash ] http/tests/inspector/network/intercept-request-with-response.html [ Crash ] http/tests/inspector/network/loadResource-insecure-resource-UpgradeMixedContent.html [ Crash ] http/tests/inspector/network/loadResource-insecure-resource.html [ Crash ] http/tests/inspector/network/local-resource-override-basic.html [ Crash ] http/tests/inspector/network/local-resource-override-main-resource.html [ Crash ] http/tests/inspector/network/local-resource-override-script-tag.html [ Crash ] http/tests/inspector/network/ping-type.html [ Crash ] http/tests/inspector/network/resource-initiatorNode.html [ Crash ] http/tests/inspector/network/resource-metrics.html [ Crash ] http/tests/inspector/network/resource-mime-type.html [ Crash ] http/tests/inspector/network/resource-redirect-request-headers.html [ Crash ] http/tests/inspector/network/resource-request-headers.html [ Crash ] http/tests/inspector/network/resource-response-inspector-override.html [ Crash ] http/tests/inspector/network/resource-response-service-worker.html [ Crash ] http/tests/inspector/network/resource-response-source-disk-cache.html [ Crash ] http/tests/inspector/network/resource-response-source-memory-cache-revalidate-expired-only.html [ Crash ] http/tests/inspector/network/resource-response-source-memory-cache.html [ Crash ] http/tests/inspector/target/pause-on-inline-debugger-statement.html [ Crash ] http/tests/inspector/target/provisional-load-cancels-previous-load.html [ Crash ] http/tests/inspector/target/target-events-for-provisional-page.html [ Crash ] http/tests/inspector/worker/blob-script-with-cross-domain-imported-scripts.html [ Crash ] http/tests/websocket/tests/hybi/inspector/before-load.html [ Crash ] http/tests/websocket/tests/hybi/inspector/binary.html [ Crash ] http/tests/websocket/tests/hybi/inspector/client-close.html [ Crash ] http/tests/websocket/tests/hybi/inspector/resolveWebSocket.html [ Crash ] http/tests/websocket/tests/hybi/inspector/send-and-receive.html [ Crash ] http/tests/websocket/tests/hybi/inspector/send-and-recieve-debugger.html [ Crash ] http/tests/websocket/tests/hybi/inspector/server-close.html [ Crash ] http/tests/xmlhttprequest/access-control-repeated-failed-preflight-crash.html [ Crash ] ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key) C:\ews\work\build\WebKitBuild\Debug\WTF\Headers\wtf/HashTable.h(649) : void WTF::HashTable<WebCore::ServiceWorkerRegistrationKey, WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>>, WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>, WTF::HashMap<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>::KeyValuePairTraits, WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>>::checkKey(const T &) [Key = WebCore::ServiceWorkerRegistrationKey, Value = WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>, Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>>, HashFunctions = WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>, Traits = WTF::HashMap<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>::KeyValuePairTraits, KeyTraits = WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>, HashTranslator = WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey, WTF::WeakRef<WebCore::SWServerRegistration>>::KeyValuePairTraits, WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>>, T = WebCore::ServiceWorkerRegistrationKey] 1 00007FF9183F2D73 WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::checkKey<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey> >,WebCore::ServiceWorkerRegistrationKey> 2 00007FF9183F2C12 WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::inlineLookup<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey> >,WebCore::ServiceWorkerRegistrationKey> 3 00007FF9183F2BDD WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::lookup<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey> >,WebCore::ServiceWorkerRegistrationKey> 4 00007FF9183F2B9B WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::contains<WTF::IdentityHashTranslator<WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey> >,WebCore::ServiceWorkerRegistrationKey> 5 00007FF9183F2B4D WTF::HashTable<WebCore::ServiceWorkerRegistrationKey,WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> > >,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::KeyValuePairTraits,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey> >::contains 6 00007FF9183CBB0D WTF::HashMap<WebCore::ServiceWorkerRegistrationKey,WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl>,WTF::DefaultHash<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WebCore::ServiceWorkerRegistrationKey>,WTF::HashTraits<WTF::WeakRef<WebCore::SWServerRegistration,WTF::DefaultWeakPtrImpl> >,WTF::HashTableTraits>::contains 7 00007FF91839BD1D WebCore::SWServer::addRegistrationFromStore 8 00007FF9183B8969 WebCore::SWServer::SWServer::<lambda_12>::operator()<std::optional<WTF::Vector<WebCore::ServiceWorkerContextData,0,WTF::CrashOnOverflow,16,WTF::FastMalloc> > > 9 00007FF9183B8751 WTF::Detail::CallableWrapper<`lambda at C:\ews\work\build\Source\WebCore\workers\service\server\SWServer.cpp:409:50',void,std::optional<WTF::Vector<WebCore::ServiceWorkerContextData,0,WTF::CrashOnOverflow,16,WTF::FastMalloc> > >::call 10 00007FF91C5C2A59 WTF::Function<void (std::optional<WTF::Vector<WebCore::ServiceWorkerContextData,0,WTF::CrashOnOverflow,16,WTF::FastMalloc> >)>::operator() 11 00007FF91C5B7509 WTF::CompletionHandler<void (std::optional<WTF::Vector<WebCore::ServiceWorkerContextData,0,WTF::CrashOnOverflow,16,WTF::FastMalloc> >)>::operator() 12 00007FF91C6F5106 WebKit::NetworkStorageManager::importServiceWorkerRegistrations::<lambda_38>::operator()::<lambda_1>::operator() 13 00007FF91C6F5077 WTF::Detail::CallableWrapper<`lambda at C:\ews\work\build\Source\WebKit\NetworkProcess\storage\NetworkStorageManager.cpp:1962:44',void>::call 14 00007FF921D23B59 WTF::Function<void ()>::operator() 15 00007FF922D7A78A WTF::RunLoop::performWork 16 00007FF922F203ED WTF::RunLoop::wndProc 17 00007FF922F202E7 WTF::RunLoop::RunLoopWndProc 18 00007FF97BD7EF5C CallWindowProcW 19 00007FF97BD7E684 DispatchMessageW 20 00007FF922F2068D WTF::RunLoop::run 21 00007FF91B64D103 WebKit::AuxiliaryProcessMainBase<WebKit::NetworkProcess,0>::run 22 00007FF91B64CFB7 WebKit::AuxiliaryProcessMain<WebKit::NetworkProcessMainCurl> 23 00007FF91B64CF5B WebKit::NetworkProcessMain 24 00007FF6CC0A101C main 25 00007FF6CC0A13CC __scrt_common_main_seh 26 00007FF97B967344 BaseThreadInitThunk 27 00007FF97D95CC91 RtlUserThreadStart ERROR: 0000025592469840 - NetworkProcessProxy::didClose (Network Process crash) C:\ews\work\build\Source\WebKit\UIProcess/Network/NetworkProcessProxy.cpp(493) : virtual void WebKit::NetworkProcessProxy::didClose(IPC::Connection &) NetworkProcess terminated (pid 20716) for reason: crash
Attachments
Fujii Hironori
Comment 1 2024-09-15 06:25:11 PDT
The public Windows Debug buildbot isn't crashing. This seems to be a problem of local cache. I'm going to wipe out the internal buildbot worker.
Fujii Hironori
Comment 2 2024-09-16 00:30:23 PDT
The crash has gone after wiping out cache on the internal buildbot. Closed.
Fujii Hironori
Comment 3 2024-09-26 00:50:58 PDT
I observed this crash when I started Windows Debug MiniBrowser on my PC. Reopened.
Radar WebKit Bug Importer
Comment 4 2024-09-26 00:51:13 PDT
Fujii Hironori
Comment 5 2024-09-26 00:55:52 PDT
EWS
Comment 6 2024-09-26 04:41:33 PDT
Committed 284277@main (d1654394a866): <https://commits.webkit.org/284277@main> Reviewed commits have been landed. Closing PR #34289 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.