Fix use-after-move in SWServer::addRegistrationFromStore https://bugs.webkit.org/show_bug.cgi?id=279733

Reviewed by Charlie Wolfe.

I observed an assertion failure when I started Window Debug
MiniBrowser on my PC.

> ASSERTION FAILED: !isHashTraitsEmptyValue<KeyTraits>(key)

`data` was used after move in SWServer::addRegistrationFromStore for
Windows port.

* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::addRegistrationFromStore):

Canonical link: https://commits.webkit.org/284277@main